[metadata]
name = playing_with_bokeh
description = Visualisation examples using bokeh
long_description = files: README.md
url = https://github.com/tszyrowski/playing-wth-bokeh.git
maintainer = tszyrowski
maintainer_email = tszyrowski@gmail.com

[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where = src

